--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -43,6 +43,7 @@
   .sub .wrapper {padding-left: 70px; padding-right: 70px;}
   #product_view.sub .wrapper {padding-left: 0; padding-right: 0;}
   .sub-head_title {font-size: 70px;}
+  .sub-head_explan {margin-top: 25px; font-size: 50px;}
   .content_title1 {font-size: 50px;}
   .content_text {font-size: 22px;}
   .sub-mid-tit {font-size: 36px;}
@@ -112,6 +113,15 @@
   .difference-compare-box {gap: 20px; padding: 20px;}
   .difference-compare-img {width: 200px; height: 200px;}
   .difference-comapre-txt-li {font-size: 18px;}
+
+  /* 고객지원 > 가이드 */
+  .guide-sec-tit {font-size: 30px;}
+  .guide-step01-tit {font-size: 40px;}
+  .guide-step01-txt--01 {font-size: 22px;}
+  .guide-step01-txt--01 span {margin: 0 5px 7px 0; font-size: 40px;}
+  .guide-step01-txt--02 {font-size: 24px;}
+  .guide-step01-txt--03 {font-size: 22px;}
+  .guide-step01-circle-in {font-size: 24px;}
 } /* End */
 
 @media screen and (max-width:1290px) {
@@ -282,6 +292,19 @@
   .difference-compare {padding: 120px 0 0;}
 
   .difference-color {margin-top: 120px; padding: 70px 0;}
+
+  /* 고객지원 > 가이드 */
+  .guide-sec-tit {padding: 0 0 30px;}
+  .guide-step01 .guide-sec-tit {padding-top: 50px;}
+  .guide-step01-ul {gap: 50px;}
+  .guide-step01-ul::after {width: calc(50% + 25px);}
+  .guide-step01-tit {font-size: 30px;}
+  .guide-step01-txt--01 {padding: 24px 0 10px; font-size: 20px;}
+  .guide-step01-txt--01 span {margin: 0 5px 0 0;}
+  .guide-step01-txt--02 {padding: 10px 0 25px; font-size: 20px;}
+  .guide-step01-txt--03 {margin: 30px 0; font-size: 18px;}
+  .guide-step01-circle {width: 176px; height: 176px;}
+  .guide-step01-circle-in {width: 150px; height: 150px; font-size: 18px;}
 
   @keyframes productArrow {
     0% {top: -45px;}
@@ -545,6 +568,27 @@
   .difference-color {margin-top: 70px; padding: 50px 0;}
   .difference-color-li {padding-top: 30px;}
 
+  /* 고객지원 > 가이드 */
+  #guide .sub-content {padding: 50px 0 20px;}
+  .guide-sec-tit {font-size: 26px;}
+
+  .guide-step01-tit {font-size: 26px;}
+  .guide-step01-box {padding: 20px 20px;}
+  .guide-step01-txt--01 {padding: 0; margin-bottom: 10px; padding-bottom: 10px; font-size: 16px;}
+  .guide-step01-txt--01 span {font-size: 24px; margin-top: -2px;}
+  .guide-step01-txt--02 {padding: 0; font-size: 16px;}
+  .guide-step01-txt--03 {font-size: 14px;}
+  .guide-step01-txt--03 b {font-weight: 500;}
+  .guide-step01-txt--03 b::after {bottom: -1px; height: 2px;}
+  .guide-step01-circle {width: 126px; height: 126px;}
+  .guide-step01-circle::before {height: 200px;}
+  .guide-step01-circle-in {width: 100px; height: 100px; font-size: 16px;}
+
+  .guide-step02-ul {gap: 30px;}
+  .guide-step02-li:nth-child(3) .guide-step02-img {border-radius: 0 120px 0 0;}
+
+  .guide-step03-txt-wr {padding: 20px;}
+
   /* Paging */
   .pg_page {font-size: 16px;}
   .pg_current {font-size: 16px;}
@@ -807,6 +851,24 @@
   .difference-comapre-txt-li {font-size: 14px;}
   .difference-comapre-txt-li__key {width: 100px;}
   .difference-comapre-txt-li__val {width: calc(100% - 100px);}
+
+  /* 고객지원 > 가이드 */
+  .guide-sec-tit {font-size: 20px; padding-bottom: 20px;}
+  .guide-step01 {text-align: left;}
+  .guide-step01 .guide-sec-tit {padding-top: 30px;}
+  .guide-step01-tit {margin-bottom: 30px; font-size: 18px;}
+  .guide-step01-tit::before {display: none;}
+  .guide-step01-tit::after {height: 3px;}
+
+  .guide-step01-ul {display: block; padding-top: 0;}
+  .guide-step01-ul::after {display: none;}
+  .guide-step01-li ~ .guide-step01-li {margin-top: 50px;}
+  .guide-step01-box {box-shadow: 0 0 10px 5px rgba(0, 0, 0, .05);}
+  .guide-step01-box::after {display: none;}
+  .guide-step01-txt--03 {margin: 20px 0; padding: 10px 0;}
+
+  .guide-step02-ul {gap: 15px;}
+  
 } /* End */
 
 @media screen and (max-width:480px) {
@@ -940,4 +1002,17 @@
   .difference-compare-box {flex-flow: column wrap;}
   .difference-compare-img {width: 100%; border-radius: 0;}
   .difference-compare-txt-ul {width: 100%;}
+
+  /* 고객지원 > 가이드 */
+  .guide-sec-tit {font-size: 18px;}
+  .guide-step01-txt--01 {font-size: 14px;}
+  .guide-step01-txt--01 span {font-size: 20px;}
+  .guide-step01-txt--02 {font-size: 14px;}
+  .guide-step01-circle-in {font-size: 14px;}
+
+  .guide-step02-ul {flex-flow: column wrap;}
+  .guide-step02-li {flex: none; width: 100%;}
+  .guide-step02-img {height: 65vw;}
+
+  .guide-step03-txt-wr {padding: 20px 0 0; gap: 5px;}
 } /* End */
