--- a/src/css/normal.css
+++ b/src/css/normal.css
@@ -24,7 +24,7 @@
 .content_text {margin-top: 45px; font-size: 24px; font-weight: 500; color: var(--color-black2);}
 
 .layer-popup {display: none; position: fixed; top: 0; left: 0; z-index: 200; width: 100%; height: 100vh; background: rgba(0,0,0,0.6);}
-.layer-popup_ct {position: absolute; top: 50%; left: 50%; z-index: 210; width: 535px; max-width: 95%; height: 610px; padding: 30px 40px; transform: translate(-50%, -50%); background: #fff; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.3);}
+.layer-popup_ct {position: absolute; top: 50%; left: 50%; z-index: 210; width: 535px; max-width: 95%; height: 610px; max-height: 90%; padding: 30px 40px; transform: translate(-50%, -50%); background: #fff; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.3);}
 .layer-popup_ct .top {display: flex; flex-flow: row wrap; align-items: center; justify-content: space-between; height: 32px;}
 .layer-popup_ct .tit {font-size: 24px; font-weight: 400; color: var(--color-black2);}
 .layer-popup_ct .close-btn {}
