--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,6 +3,7 @@
 html, body {max-width: 100%; min-height: 100%; font-size: 16px;}
 html {overflow-x: hidden; -webkit-text-size-adjust: none;}
 body {-webkit-print-color-adjust: exact; background: #FFFFFF; font-family: 'Pretendard'; font-style: normal; font-weight: 300; color: #333333; line-height: 1.3; letter-spacing: -0.5px;}
+body::-webkit-scrollbar { display:none; }
 ul, li, dl,dt,dd {margin: 0; padding: 0; list-style: none;}
 h1, h2, h3, h4, h5, h6 {font-family: 'Pretendard';}
 a {color: #333333; text-decoration: none;}
