[영문/공통] 언어버튼 링크 연결

--- a/src/css/normal_eng.css
+++ b/src/css/normal_eng.css
@@ -1,5 +1,6 @@
 /* Header */
 #header .inspection-btn {width: 160px;}
+.mo-tnb .inspection-btn {width: 120px;}
 
 /* Main */
 .main_visual .swiper-slide .txt-box .t1 {font-size: 80px;}
