[색각검사] 프론트개발 중단
-기획 및 디자인 수정 대기

--- a/src/css/normal.css
+++ b/src/css/normal.css
@@ -694,6 +694,43 @@
 .pg_current {position: relative; min-width: auto; font-size: 20px; color: var(--color-black2); font-weight: bold; height: auto; line-height: inherit; border-radius: 0;}
 .pg_current::after {position: absolute; bottom: 0; left: 50%; width: 50%; height: 2px; margin-left: -25%; background: var(--color-black2); content:"";}
 
+/* 색각검사 */
+#inspection_popup {}
+#inspection_popup .layer-popup_ct {overflow: hidden; width: 940px; height: 600px; padding: 0; border-radius: 20px;}
+#inspection_popup .layer-popup_ct .top {height: 105px; padding: 0 36px; background-color: var(--color-main);}
+#inspection_popup .layer-popup_ct .tit {font-size: 40px; font-weight: 700; color: var(--color-black2);}
+#inspection_popup .layer-popup_ct .close-btn {width: 65px; height: 60px; border-radius: 999px 0 999px 999px; background: var(--color-black3);}
+
+#inspection_popup .layer-popup_ct .mid {height: calc(100% - 275px); margin: 30px auto;}
+#inspection_popup .cbTest_wrap {display: flex; flex-flow: row wrap; align-items: center; justify-content: center; padding: 0 100px; gap: 90px;}
+#inspection_popup .cbTest-img {width: calc(50% - 45px);}
+#inspection_popup .cbTest-chkList {width: calc(50% - 45px);}
+#inspection_popup .cbTest-chkList > ul {display: flex; flex-flow: row wrap; justify-content: space-between; gap: 12px;}
+#inspection_popup .cbTest-chkList > ul > li {width: calc(33.333% - (24px / 3));}
+#inspection_popup .cbTest-chkList_btn input[type='radio'] {display: none;}
+#inspection_popup .cbTest-chkList_btn input[type='radio'] + label {display: block; width: 86px; height: 86px; line-height: 84px; border-radius: 50%; border: 1px solid var(--color-gray7); font-size: 24px; font-weight: 700; color: var(--color-gray5); text-align: center; background: var(--color-white); cursor: pointer;}
+#inspection_popup .cbTest-chkList_btn input[type='radio']:checked + label {color: var(--color-white); background: var(--color-main);}
+
+#inspection_popup .bot .ui-btn {
+  display: block;
+  width: 172px;
+  height: 52px;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: 400;
+}
+#inspection_popup .bot .step-btn1 {
+  border: 1px solid #bbb;
+  color: var(--color-black3);
+  background: var(--color-white);
+}
+#inspection_popup .bot .step-btn2 {
+  border: 1px solid var(--color-black3);
+  color: var(--color-white);
+  background: var(--color-black3);
+}
+
+
 @keyframes productArrow {
   0% {top: -38px;}
   65% {top: -25px;}
