--- a/src/css/normal_eng.css
+++ b/src/css/normal_eng.css
@@ -14,3 +14,8 @@
 .location-list-li__l {font-size: 28px; padding-right: 30px;}
 .location-list-li__l p {line-height: 1.3;}
 .location-info-li {font-size: 18px;}
+
+.product-visual_title {width: 40%;}
+.product-visual_text1 {width: 40%;}
+.product-visual_text2 {width: 40%;}
+.product-visual_scroll {margin-top: 120px;}
