[영문/제품상세] 번역 완료 (임시)

--- a/src/css/normal_eng.css
+++ b/src/css/normal_eng.css
@@ -19,3 +19,6 @@
 .product-visual_text1 {width: 40%;}
 .product-visual_text2 {width: 40%;}
 .product-visual_scroll {margin-top: 120px;}
+
+.product-v_detail .lensType .type-ct .info > ul {flex-flow: column wrap;}
+.product-v_detail .lensType .type-ct .info > ul > li {width: 100%;}
