[영문/기술소개] 번역 완료 (임시)
-차별화 기술 이미지 번역 필요

--- a/src/css/normal_eng.css
+++ b/src/css/normal_eng.css
@@ -22,3 +22,8 @@
 
 .product-v_detail .lensType .type-ct .info > ul {flex-flow: column wrap;}
 .product-v_detail .lensType .type-ct .info > ul > li {width: 100%;}
+
+.difference-compare-box {flex-flow: column wrap;}
+.difference-compare-txt-ul {width: 100%;}
+.difference-comapre-txt-li__key {width: auto;}
+.difference-comapre-txt-li__val {width: auto; padding-left: 10px; font-weight: 300;}
